Your commit message

--- a/index.html
+++ b/index.html
@@ -10,15 +10,177 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="" class="nav-item">خانه</a>
+        <a href="index.html" class="nav-item">خانه</a>
         <a href="" class="nav-item">کتاب ها</a>
-        <a href="" class="nav-item">درباره ما</a>
+        <a href="aboutUs.html" class="nav-item">درباره ما</a>
         <a href="" class="nav-item">ارتباط با ما</a>
       </nav>
       <img src="./images/logo.png" alt="kianize logo" class="logo" />
       <a href="" class="button button-brown">خرید کتاب</a>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="book_categury">
+        <h1>کتابخانه کیانیزه</h1>
+      </section>
+
+      <div style="text-align: center; margin-bottom: 2rem">
+        <a href="#" class="button button-yellow">مشاهده تمامی کتاب‌ها</a>
+      </div>
+
+      <div class="book_items">
+        <figure class="book_item">
+          <img src="./images/jenaii.png" class="book_item_image" alt="جنایی" />
+          <figcaption class="book_item_text">
+            <h2>جنایی</h2>
+            <p>
+              کتاب جنایی یکی از ژانرهای محبوب ادبیات است که به داستان‌های
+              معماگونه و حل معماهای جنایی می‌پردازد. این نوع کتاب‌ها معمولاً
+              شامل کارآگاهان، جنایتکاران و تحقیقات پلیسی هستند.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="book_item">
+          <img src="./images/roman.png" class="book_item_image" alt="رمان" />
+          <figcaption class="book_item_text">
+            <h2>رمان</h2>
+            <p>
+              رمان یکی از مهم‌ترین و پرطرفدارترین ژانرهای ادبیات است که به
+              داستان‌های بلند و پیچیده می‌پردازد. این نوع کتاب‌ها معمولاً شامل
+              شخصیت‌های عمیق، داستان‌های جذاب و موضوعات اجتماعی هستند.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="book_item">
+          <img src="./images/adabi.png" class="book_item_image" alt="ادبیات" />
+          <figcaption class="book_item_text">
+            <h2>ادبیات</h2>
+            <p>
+              ادبیات به مجموعه‌ای از آثار نوشتاری اطلاق می‌شود که شامل شعر،
+              داستان، نمایشنامه و نثر است. این نوع کتاب‌ها معمولاً به بیان
+              احساسات، افکار و تجربیات انسانی می‌پردازند.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+      <section class="comments">
+        <h2>از ذهن‌های ماندگار، برای سطرهای ماندگار</h2>
+        <div class="comment_items">
+          <figure class="comment_item">
+            <img
+              src="./images/mani nasir.png"
+              class="comment_item_image"
+              alt="مانی نصیرنژاد"
+            />
+            <figcaption class="comment_item_text">
+              <h3>مانی نصیرنژاد</h3>
+              <a href="">کیمیاگر اثر پائولو کوئیلو</a>
+              <p>
+                کیمیاگر داستانی است دربارهٔ یک چوپان جوان به نام سانتیاگو که در
+                جستجوی گنجی در مصر است. این کتاب به ما یادآوری می‌کند که دنبال
+                کردن رویاها و آرزوهایمان چقدر مهم است و باید به ندای قلبمان گوش
+                دهیم. این داستان به ما می‌آموزد که زندگی یک سفر است و هر لحظه از
+                آن ارزشمند است. کیمیاگر به ما نشان می‌دهد که باید از موانع و
+                چالش‌ها گذر کنیم و به دنبال آرزوهایمان برویم.
+              </p>
+            </figcaption>
+          </figure>
+
+          <figure class="comment_item">
+            <img
+              src="./images/hasan salami.png"
+              class="comment_item_image"
+              alt="حسن سلامی اسکویی"
+            />
+            <figcaption class="comment_item_text">
+              <h3>حسن سلامی اسکویی</h3>
+              <a href="">رکسانا اثر م مودب پور</a>
+              <p>
+                رکسانا داستانی است دربارهٔ یک دختر جوان به نام رکسانا که در
+                جستجوی هویت و عشق واقعی خود است. این کتاب به ما یادآوری می‌کند
+                که عشق و دوستی چقدر مهم هستند و باید به احساسات و نیازهای خود
+                گوش دهیم. این داستان به ما می‌آموزد که باید از موانع و چالش‌ها
+                گذر کنیم و به دنبال عشق واقعی‌مان برویم.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="comment_item">
+            <img
+              src="./images/ali sharif.png"
+              class="comment_item_image"
+              alt="علی شریف"
+            />
+            <figcaption class="comment_item_text">
+              <h3>علی شریف</h3>
+              <a href="">بوف کور اثر صادق هدایت</a>
+              <p>
+                بوف کور داستانی است دربارهٔ یک مرد تنها و افسرده که در جستجوی
+                هویت و معنا در زندگی خود است. این کتاب به ما یادآوری می‌کند که
+                زندگی پر از چالش‌ها و دردهاست، اما باید به دنبال نور و امید
+                باشیم. این داستان به ما می‌آموزد که باید از تاریکی‌ها عبور کنیم
+                و به دنبال روشنایی برویم.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="comment_item">
+            <img
+              src="./images/amir jan bozorgi.png"
+              class="comment_item_image"
+              alt="امیر جان بزرگی"
+            />
+            <figcaption class="comment_item_text">
+              <h3>امیر جان بزرگی</h3>
+              <a href="">سالار مگس ها اثر ویلیام گلدینگ</a>
+              <p>
+                سالار مگس‌ها داستانی است دربارهٔ گروهی از بچه‌ها که در یک جزیره
+                دورافتاده گیر می‌افتند و تلاش می‌کنند تا جامعه‌ای بسازند. این
+                کتاب به ما یادآوری می‌کند که انسان‌ها در شرایط سخت چگونه رفتار
+                می‌کنند. برخی از آن‌ها به دنبال قدرت و کنترل هستند، در حالی که
+                برخی دیگر به دنبال همکاری و دوستی هستند. این داستان به ما
+                می‌آموزد که باید از قدرت و کنترل گذر کنیم و به دنبال همکاری و
+                همدلی باشیم تا بتوانیم جامعه‌ای بهتر بسازیم.
+              </p>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section class="contactUs">
+        <h2>تماس با ما</h2>
+        <div>
+          <h3>
+            <img src="./images/pin.png" alt="آدرس" class="content-photo" />
+            آدرس
+          </h3>
+          <p>تهران، خیابان ولیعصر، نبش خیابان شریعتی</p>
+          <h3>
+            <img src="./images/phone.png" alt="تلفن" class="content-photo"/>
+            تلفن
+          </h3>
+          <p>021-12345678</p>
+          <h3><img src="./images/email.png" alt="ایمیل" class="content-photo" />ایمیل</h3>
+          <p>imgigilios@gmail.com</p>
+        </div>
+      </section>
+      <section class="categury">
+        <h2>دسته‌بندی‌ها</h2>
+        <div>
+          <a href="">جنایی</a>
+          <a href="">رمان</a>
+          <a href="">ادبیات</a>
+        </div>
+      </section>
+    </section>
+    <section class="fast-link">
+      <h2>دسترسی آسان</h2>
+      <div>
+        <h3>بوف کور</h3>
+        <h3>رکسانا</h3>
+        <h3>سالار مگس‌ها</h3>
+      </div>
+    </section>
+    </footer>
   </body>
 </html>
